@@ -107,9 +107,10 @@ sort_ints (GtkTreeModel *model, GtkTreeIter *itera, GtkTreeIter *iterb, gpointer
 	
 	if (a > b)
 		return -1;
-	else
-		return 1;	
-	
+	else if (a < b)
+		return 1;
+        else
+                return 0;	
 }
 
 GtkWidget *
